<resources>
    <string name="app_name">CSC13009-Android-CKDP</string>
    <string name="title_firstaid">First Aid</string>
    <string name="title_animalbite">Animal Bites</string>
    <string name="title_brokenbone">Broken Bone</string>
    <string name="title_burn">Burn</string>
    <string name="title_choking">Choking</string>
    <string name="title_cut">Cut</string>
    <string name="title_drowning">Drowning</string>
    <string name="title_electricshock">Electric Shock</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_heartattack">Heart Attack</string>
    <string name="title_nosebleeding">Nose Bleed</string>
    <string name="title_poisonousplant">Poisonous Plant</string>
    <string name="title_sprain">Sprain</string>
    <string name="title_stroke">Stroke</string>
    <string name="title_thorns">Thorns</string>
    <string name="firstaid">
How do I make a first aid kit.\n\u0009\u0009\u0009\u0009A well-stocked first aid kit is a must-have for treating minor injuries at home and on the go. You can buy a first aid kit or put one together on your own. Keep your supplies in a sturdy, clear plastic box so you can see what’s inside.\n

What should be in my first aid kit?\n

\u0009\u0009\u0009\u0009- Adhesive tape\n\u0009\u0009\u0009\u0009- Alcohol wipes\n\u0009\u0009\u0009\u0009- Allergy medicine\n\u0009\u0009\u0009\u0009- Aloe vera gel\n\u0009\u0009\u0009\u0009- Antibiotic ointment\n\u0009\u0009\u0009\u0009- Bandages in different sizes\n\u0009\u0009\u0009\u0009- Calamine lotion\n\u0009\u0009\u0009\u0009- Cold packs\n\u0009\u0009\u0009\u0009- Elastic bandages\n\u0009\u0009\u0009\u0009- Gauze rolls and pads\n\u0009\u0009\u0009\u0009- Hand sanitizer (for your travel first aid kit)\n\u0009\u0009\u0009\u0009- Hydrocortisone cream\n\u0009\u0009\u0009\u0009- Latex-free gloves\n\u0009\u0009\u0009\u0009- Pain relievers like acetaminophen and ibuprofen\n\u0009\u0009\u0009\u0009- Saline wound wash\n\u0009\u0009\u0009\u0009- Scissors and tweezers
    </string>
    <string name="anaphylaxis">
Anaphylaxis (or anaphylactic shock) is a severe allergic reaction that can occur after an insect sting or after eating certain foods. The adverse reaction can be very fast, occurring within seconds or minutes of coming into contact with the substance the person is allergic to (allergen).\n\nDuring anaphylactic shock, it may be difficult for the person to breathe, as their tongue and throat may swell, obstructing their airway.\n\nPhone 999 or 112 immediately if you think someone is experiencing anaphylactic shock.\n\nCheck if the person is carrying any medication. Some people who know they have severe allergies may carry an adrenaline self-injector, which is a type of pre-loaded syringe. You can either help the person administer their medication or, if you are trained to do so, give it to them yourself.\n\nAfter the injection, continue to look after the person until medical help arrives. All casualties who have had an intramuscular or subcutaneous (under the skin) injection of adrenaline must be seen and medically checked by a healthcare professional as soon as possible after the injection has been given.\n\nMake sure they are comfortable and can breathe as best they can while waiting for medical help to arrive. If they are conscious, sitting upright is normally the best position for them.
    </string>
    <string name="animalbite">
How do I treat animal bites and scratches?\n\u0009\u0009\u0009\u0009Sometimes a seemingly friendly dog or cat can bite or scratch. If you or your child gets a bite, follow these steps to treat the wound:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Hold a towel or gauze to the area to stop the bleeding.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Clean the wound with soap and water.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Cover it with a clean bandage or gauze pad.\n\u0009\u0009\u0009\u0009When should I see a doctor for an animal bite?\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009For any animal bite, you may need an antibiotic to prevent infection. So it’s always a good idea to call your doctor, especially if you have medical conditions that weaken your immune system. Also, you should call your doctor or head to the emergency room if:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- The bite was caused by an animal you don’t know, or by any wild animal like a raccoon, skunk, or bat. You may need a tetanus or rabies vaccine.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- The bite is large, or it doesn’t stop bleeding after you’ve held pressure on it for 15 minutes. It may need to be closed with stitches.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- You think the bite may have damaged a bone, tendons, or nerves, because you can’t bend or straighten the body part or you’ve lost feeling in it.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- The wound is red, swollen, or oozing fluid.\nHow do I treat bee, wasp, and other insect stings?\n\u0009\u0009\u0009\u0009Here’s what to do:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- If the insect has left behind a stinger, remove it from the skin so less of the venom gets into your body. You can scrape out the stinger with the edge of a credit card or the dull edge of a knife. Don’t squeeze the stinger. You might release more of the venom into your skin.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Once the stinger is out or if there is no stinger, wash the area around the sting with soap and water.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Hold an ice pack or cool washcloth to the sting to stop it from swelling.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Spread calamine lotion or baking soda mixed with water to relieve pain.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- To prevent itching, use a spray or cream containing hydrocortisone or antihistamine.\nRELATED\nHow do I treat a mosquito bite?\n\u0009\u0009\u0009\u0009Here’s what to do:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Apply firm pressure to the bite for 10 seconds to help stop the itch.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Use a baking soda paste or hydrocortisone cream 4 times a day to relieve itching. Don’t have either on hand? Holding ice or a wet washcloth on the bite will also help.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Take an antihistamine if the bite is very itchy.\nWhat are the signs that my child is allergic to the insect?\n\u0009\u0009\u0009\u0009It’s normal for the skin around the insect sting to swell up and get red. But call 911 or go to the emergency room if you see any of these signs of an allergic reaction:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Dizziness\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Hives — red, itchy bumps on the skin\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Stomach cramps, vomiting, or diarrhea\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Swelling of the tongue\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Trouble breathing, wheezing\n\u0009\u0009\u0009\u0009Anyone who has allergies to bees, wasps, or other stinging insects should keep an epinephrine auto-injector at home, work, and school in case of a sting.\nHow do I treat a spider bite?\n\u0009\u0009\u0009\u0009For most of the harmless types of spiders you’ll find at home, treatment is pretty simple:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Wash the area with soap and water.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Hold an ice pack or cool washcloth to the bite to relieve pain and bring down swelling.\nHow do I know if a spider is poisonous?\n\u0009\u0009\u0009\u0009Spiders might be creepy and crawly, but most of them aren’t poisonous. The poisonous spiders to watch out for are the brown recluse and black widow. Here’s how to spot them:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Brown recluse spiders are about 1/2-inch long. They’re brown and have a mark in the shape of a violin on their back.\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Black widow spiders are black with a red hourglass-shaped mark on their stomach.\nWhat should I do for a poisonous spider bite?\n\u0009\u0009\u0009\u0009If you think you were bitten by a poisonous spider like a brown recluse or black widow, call 911 or go to the emergency room right away. Look for these signs:\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- A red or purple color around the bite\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Pain in the bite area\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Swelling around the bite\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Muscle pain and cramps\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Fever\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Chills\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Rash\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Stomach pain\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Nausea and vomiting\n\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009- Trouble breathing
    </string>
    <string name="app_name_main">Healthcare app</string>
    <string name="change_email">Change Email</string>
    <string name="change_email_description">To change email you need to enter your current password</string>
    <string name="current_password">Current password</string>
    <string name="authenticate">Authenticate</string>
    <string name="new_email">New email</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="forget_password_ask">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_google">Login with google</string>
    <string name="login_facebook">Login with facebook</string>
    <string name="email_updated">Email updated</string>
    <string name="email_updated_description">Your email has been updated!</string>
    <string name="ask_not_account">Don\'t have an account yet?</string>
    <string name="ask_have_account">Already have an account?</string>
    <string name="ask_sign_up">Sign up now!</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="email_address_hint">Enter your email</string>
    <string name="full_name">Full name</string>
    <string name="full_name_hint">Enter your full name</string>
</resources>