<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/app_main1"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="26sp"
            android:text="@string/app_name_main"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:padding="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_weight="1"
                    android:background="#EEEEEE"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_weight="1"
                    android:background="#EEEEEE"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/edit_outline1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"/>

                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/textSignUpEmail"
                    android:background="@drawable/edit_clear"
                    android:hint="@string/email_address_hint"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_outline1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"/>

                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/textSignUpName"
                    android:background="@drawable/edit_clear"
                    android:hint="@string/full_name_hint"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_outline1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/textSignUpPassword"
                    android:background="@drawable/edit_clear"
                    android:hint="@string/password_hint"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_outline1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:text="CONFIRM PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/textSignUpConfirmPassword"
                    android:background="@drawable/edit_clear"
                    android:hint="@string/confirm_password_hint"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <FrameLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_outline"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                     />

                <ProgressBar
                    android:id="@+id/progressSignUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_have_account"
                    android:textSize="16sp"

                    />

                <TextView
                    android:id="@+id/loginNavRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="@string/login"
                    android:textColor="@color/blue"
                    />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>