<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main1"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_main"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:textAllCaps="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:hint="Email Login"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_gray"
                android:drawablePadding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtLoginForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/forget_password_ask"
            android:textSize="16sp"
            />

        <FrameLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:backgroundTint="@null"
                android:background="@drawable/button_outline"
                android:text="@string/login"
                />

            <ProgressBar
                android:id="@+id/progressSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>


        <Button
            android:id="@+id/btnSignInGG"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_google"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_outline"

            android:drawableLeft="@drawable/ic_google"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/btnSignInFb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_facebook"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_outline"

            android:drawableLeft="@drawable/ic_facebook"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_not_account"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/txtLoginSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/ask_sign_up"
                android:textColor="@color/blue"
                />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>