<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@null"
    android:background="@color/app_main1">

    <LinearLayout
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_gravity="center"
        >

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_updated"
            android:textSize="50sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_check_circle"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_updated_description"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnLoginEmailUpdated"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:background="@null"
            android:backgroundTint="@color/app_main2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="150dp"
            />
    </LinearLayout>
</LinearLayout>